external-crates/move/crates/move-package-alt/tests/data/invalid_environment/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/invalid_environment/Move.toml"`
  ┌─ "tests/data/invalid_environment/Move.toml":8:11
  │
8 │ mainnet = 9123
  │           ^^^^
  │
  = invalid type: integer `9123`, expected a string
